--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
